package com.scm.order_service.enums;

public enum OrderStatus {
    CREATED,
    VALIDATED,
    PICKED,
    DISPATCHED,
    CANCELLED
}